feat(repaint-manager): replace QuickTime with vlcj
QuickTime for Java (QTJ) is gone, and only worked on macOs.
E.g. see https://bugs.openjdk.org/browse/JDK-8043697

This use vlcj's callback rendering swing component, so when a video is passed
the video frames continue through this demo's custom Swing repaint manager.

Added a small task that runs the demo with a ffmpeg generated test-card video.